kubernetes/deployment.yaml
# Namespace: career-coach
apiVersion: v1
kind: Namespace
metadata:
  name: career-coach

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: career-coach-deployment
  namespace: career-coach
spec:
  replicas: 2
  selector:
    matchLabels:
      app: career-coach
  template:
    metadata:
      name: career-coach-frontend-pod
      labels:
        app: career-coach
    spec:
      serviceAccountName: career-coach-sa
      containers:
      - name: career-coach-frontend
        image: shubhankar24/ai-career-coach:sha-598d9ab15524339594be50238054713e4c830090
        resources:      # Resource Quotas for limitation of CPU and Memory Usage
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        ports:
        - containerPort: 3000
