kubernetes/deployment.yml
# Namespace: career-coach
kind: Namespace
apiVersion: v1
metadata:
  name: career-coach

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carrer-coach-frontend-deployment
  namespace: career-coach
spec:
  replicas: 2
  selector:
    matchLabels:
      app: carrer-coach
  template:
    metadata:
      name: carrer-coach-frontend-pod
      labels:
        app: carrer-coach
    spec:
      containers:
      - name: carrer-coach-frontend
        image: shubhankar24/cc-k8-test:v0.1
        resources:      # Resource Quotas for limitation of CPU and Memory Usage
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        ports:
        - containerPort: 3000
