kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: CareerCoachIngress
  namespace: career-coach
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing # Using AWS ALB
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb   #This is for AWS ALB Ingress Controller
  rules:
  - host: www.devopsbyshubhankar.shop 
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: career-coach-service
            port: 
              number: 3000
